design: Add description for graph generation sequence

--- a/Documentation/Entwurf/entwurf.tex
+++ b/Documentation/Entwurf/entwurf.tex
@@ -1006,6 +1006,8 @@ Abwicklung eines einzelnen nicht-trivialen Interpretationsschritts im Kontext ei
 
 \subsection{Generierung der Visualisierung}
 
+Ablauf der Generierung des Graphen nach einem abgeschlossenen Interpretationsschritt. 
+
 \section{Zustandsdiagramm}
 
 Veranschaulichung der möglichen Zustände und Zustandsübergänge für das Parsen und Interpretieren eines Prolog-Programmes sowie die Ausgabe der Visualisierung.
